--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,11 @@
     </ul>
     ]]></description>
 
+    <change-notes><![CDATA[
+    See https://github.com/ocadaruma/jsr310-intellij-plugin/releases
+    ]]>
+    </change-notes>
+
     <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
     <depends>com.intellij.modules.platform</depends>
