--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.mayreh.jsr310-intellij-plugin</id>
     <name>JSR-310 Support</name>
-    <vendor url="https//github.com/ocadaruma">Haruki Okada</vendor>
+    <vendor url="https://github.com/ocadaruma">Haruki Okada</vendor>
 
     <description><![CDATA[
     Plugin that adds supports for JSR-310 (Date and Time API).<br>
